--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.2.2
   shared_preferences: ^2.3.2
+  image_picker: ^1.1.2
+  path: ^1.9.0
+
 
 dev_dependencies:
   flutter_test:
